contrib/sync_db_pools/codegen/tests/ui-fail-nightly/database-types.stderr
error[E0277]: the trait bound `Unknown: Poolable` is not satisfied
 --> tests/ui-fail-nightly/database-types.rs:6:10
  |
6 | struct A(Unknown);
  |          ^^^^^^^ the trait `Poolable` is not implemented for `Unknown`
  |
note: required by a bound in `rocket_sync_db_pools::Connection`
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/connection.rs
  |
  | pub struct Connection<K, C: Poolable> {
  |                             ^^^^^^^^ required by this bound in `Connection`

error[E0277]: the trait bound `Vec<i32>: Poolable` is not satisfied
 --> tests/ui-fail-nightly/database-types.rs:9:10
  |
9 | struct B(Vec<i32>);
  |          ^^^^^^^^ the trait `Poolable` is not implemented for `Vec<i32>`
  |
note: required by a bound in `rocket_sync_db_pools::Connection`
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/connection.rs
  |
  | pub struct Connection<K, C: Poolable> {
  |                             ^^^^^^^^ required by this bound in `Connection`

error[E0277]: the trait bound `Unknown: Poolable` is not satisfied
 --> tests/ui-fail-nightly/database-types.rs:6:10
  |
6 | struct A(Unknown);
  |          ^^^^^^^ the trait `Poolable` is not implemented for `Unknown`
  |
note: required by a bound in `ConnectionPool`
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/connection.rs
  |
  | pub struct ConnectionPool<K, C: Poolable> {
  |                                 ^^^^^^^^ required by this bound in `ConnectionPool`

error[E0277]: the trait bound `Vec<i32>: Poolable` is not satisfied
 --> tests/ui-fail-nightly/database-types.rs:9:10
  |
9 | struct B(Vec<i32>);
  |          ^^^^^^^^ the trait `Poolable` is not implemented for `Vec<i32>`
  |
note: required by a bound in `ConnectionPool`
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/connection.rs
  |
  | pub struct ConnectionPool<K, C: Poolable> {
  |                                 ^^^^^^^^ required by this bound in `ConnectionPool`

error[E0599]: the function or associated item `fairing` exists for struct `ConnectionPool<A, Unknown>`, but its trait bounds were not satisfied
 --> tests/ui-fail-nightly/database-types.rs:5:1
  |
3 | struct Unknown;
  | -------------- doesn't satisfy `Unknown: Poolable`
4 |
5 | #[database("foo")]
  | ^^^^^^^^^^^^^^^^^^ function or associated item cannot be called on `ConnectionPool<A, Unknown>` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Unknown: Poolable`
note: the trait `Poolable` must be implemented
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/poolable.rs
  |
  | pub trait Poolable: Send + Sized + 'static {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `database` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `run` exists for struct `Connection<A, Unknown>`, but its trait bounds were not satisfied
 --> tests/ui-fail-nightly/database-types.rs:5:1
  |
3 | struct Unknown;
  | -------------- doesn't satisfy `Unknown: Poolable`
4 |
5 | #[database("foo")]
  | ^^^^^^^^^^^^^^^^^^ method cannot be called on `Connection<A, Unknown>` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Unknown: Poolable`
note: the trait `Poolable` must be implemented
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/poolable.rs
  |
  | pub trait Poolable: Send + Sized + 'static {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `database` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the function or associated item `get_one` exists for struct `ConnectionPool<A, Unknown>`, but its trait bounds were not satisfied
 --> tests/ui-fail-nightly/database-types.rs:5:1
  |
3 | struct Unknown;
  | -------------- doesn't satisfy `Unknown: Poolable`
4 |
5 | #[database("foo")]
  | ^^^^^^^^^^^^^^^^^^ function or associated item cannot be called on `ConnectionPool<A, Unknown>` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Unknown: Poolable`
note: the trait `Poolable` must be implemented
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/poolable.rs
  |
  | pub trait Poolable: Send + Sized + 'static {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `database` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the function or associated item `fairing` exists for struct `ConnectionPool<B, Vec<i32>>`, but its trait bounds were not satisfied
 --> tests/ui-fail-nightly/database-types.rs:8:1
  |
8 | #[database("foo")]
  | ^^^^^^^^^^^^^^^^^^ function or associated item cannot be called on `ConnectionPool<B, Vec<i32>>` due to unsatisfied trait bounds
  |
 ::: $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  | ------------------------------------------------------------------------------------------------ doesn't satisfy `Vec<i32>: Poolable`
  |
  = note: the following trait bounds were not satisfied:
          `Vec<i32>: Poolable`
  = note: this error originates in the attribute macro `database` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `run` exists for struct `Connection<B, Vec<i32>>`, but its trait bounds were not satisfied
 --> tests/ui-fail-nightly/database-types.rs:8:1
  |
8 | #[database("foo")]
  | ^^^^^^^^^^^^^^^^^^ method cannot be called on `Connection<B, Vec<i32>>` due to unsatisfied trait bounds
  |
 ::: $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  | ------------------------------------------------------------------------------------------------ doesn't satisfy `Vec<i32>: Poolable`
  |
  = note: the following trait bounds were not satisfied:
          `Vec<i32>: Poolable`
  = note: this error originates in the attribute macro `database` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the function or associated item `get_one` exists for struct `ConnectionPool<B, Vec<i32>>`, but its trait bounds were not satisfied
 --> tests/ui-fail-nightly/database-types.rs:8:1
  |
8 | #[database("foo")]
  | ^^^^^^^^^^^^^^^^^^ function or associated item cannot be called on `ConnectionPool<B, Vec<i32>>` due to unsatisfied trait bounds
  |
 ::: $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  | ------------------------------------------------------------------------------------------------ doesn't satisfy `Vec<i32>: Poolable`
  |
  = note: the following trait bounds were not satisfied:
          `Vec<i32>: Poolable`
  = note: this error originates in the attribute macro `database` (in Nightly builds, run with -Z macro-backtrace for more info)
